--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Mcpeplay Games Website
-    url: https://mcpeplay.tk
+  - name: The Mcpeplay Games Website
+    url: https://mcpeplay.ga
     about: The Mcpeplay Games Website
-  - name: Mcpeplay Games Discord
+  - name: The Mcpeplay Games Discord
     url: https://dsc.gg/mcpp
     about: Here you can chat or do other things!
